# L41-Which-dog-are-you-

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_training.py
.claude/: CLAUDE.md  settings.json
.claude/rules/: autonomous-execution.md  git.md  implementation-workflow.md  python-ml.md  security.md  testing.md
.claude/skills/debug/: SKILL.md
.claude/skills/docs/: SKILL.md
.claude/skills/experiment/: SKILL.md
.claude/skills/mermaid/: SKILL.md
.claude/skills/test/: SKILL.md
.claude/skills/train/: SKILL.md
.claude/skills/visualize/: SKILL.md
docs/: PRD.md  tasks.json
notebooks/: dog_breed_classifier.ipynb
results/tables/: alexnet_evaluation.json  mobilenet_evaluation.json  model_comparison.csv  resnet50_evaluation.json  simple_cnn_evaluation.json
src/: __init__.py  config.py
src/data/: analysis.py  augmentation.py  dataset.py  download.py  organize.py
src/experiments/: celebrity_matching.py  compare_architectures.py  non_dog_predictions.py
src/inference/: predict.py
src/models/: __init__.py  alexnet.py  inception.py  mobilenet.py  resnet.py  simple_cnn.py  vgg.py
src/training/: __init__.py  evaluate.py  trainer.py  transfer_learning.py
src/visualization/: confusion.py  gallery.py  plots.py
